<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.rtxschool.zombies.FirstFragment"
        android:label="@string/txt_frag_log"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/from_log_to_movies"
            app:destination="@id/first2Fragment" />
        <action
            android:id="@+id/from_prim_to_stat"
            app:destination="@id/first6Fragment" />
        <action
            android:id="@+id/from_prim_to_cam"
            app:destination="@id/first8Fragment" />
        <action
            android:id="@+id/from_prim_to_cartog"
            app:destination="@id/second2Fragment" />
        <action
            android:id="@+id/prim_to_cam_street_issues"
            app:destination="@id/camStreetNetIssuesFrag" />
    </fragment>
    <fragment
        android:id="@+id/first2Fragment"
        android:name="com.rtxschool.zombies.zombiesPubsFrag"
        android:label="@string/txt_frag_movies"
        tools:layout="@layout/zombies_pubs_frag">
        <action
            android:id="@+id/from_movies_to_summary"
            app:destination="@id/first4Fragment" />
    </fragment>
    <fragment
        android:id="@+id/first4Fragment"
        android:name="com.rtxschool.zombies.zombieSpecificFrag"
        android:label="@string/txt_frag_summary"
        tools:layout="@layout/zombie_specific_frag" />
    <fragment
        android:id="@+id/first6Fragment"
        android:name="com.rtxschool.zombies.selfStatFrag"
        android:label="@string/txt_frag_stat"
        tools:layout="@layout/self_stat_frag">
        <action
            android:id="@+id/from_stat_to_career"
            app:destination="@id/secondFragment" />
    </fragment>
    <fragment
        android:id="@+id/secondFragment"
        android:name="com.rtxschool.zombies.selfStatCareerFrag"
        android:label="@string/txt_frag_prof"
        tools:layout="@layout/self_stat_career_frag" />
    <fragment
        android:id="@+id/first8Fragment"
        android:name="com.rtxschool.zombies.camStreetFrag"
        android:label="@string/txt_frag_cam"
        tools:layout="@layout/fragment_first8" />
    <fragment
        android:id="@+id/second2Fragment"
        android:name="com.rtxschool.zombies.cartogFrag"
        android:label="Streets Map">
        <action
            android:id="@+id/cartog_to_street"
            app:destination="@id/second6Fragment" />
    </fragment>
    <fragment
        android:id="@+id/second6Fragment"
        android:name="com.rtxschool.zombies.cartogStreetFrag"
        android:label="Street Cam" />
    <fragment
        android:id="@+id/camStreetNetIssuesFrag"
        android:name="com.rtxschool.zombies.camStreetNetIssuesFrag"
        android:label="Net Issues"
        tools:layout="@layout/fragment_cam_street_net_issues" />
</navigation>